--- a/index.html
+++ b/index.html
@@ -86,7 +86,15 @@
       <button>Trigger a Global Error</button>
     </section>
   </main>
-
+             
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  <script>
+    window.TrackJS && TrackJS.install({ 
+      token: "f57d0ae07a4041998d8846ab04639f55"
+      // for more configuration options, see https://docs.trackjs.com
+    });
+  </script>
+                        
   <script>
     let form = document.querySelector('form');
     form.addEventListener('submit', e => {
@@ -95,13 +103,100 @@
       let firstNum = document.querySelector('#first-num').value;
       let secondNum = document.querySelector('#second-num').value;
       let operator = document.querySelector('#operator').value;
-      output.innerHTML = eval(`${firstNum} ${operator} ${secondNum}`);
+      // try catch
+      try {
+        if(isNaN(firstNum) || isNaN(secondNum)) {
+          throw new Error("Inputs must be numbers");
+        }
+        output.innerHTML = eval(`${firstNum} ${operator} ${secondNum}`);
+      }
+      catch (err) {
+        console.error(err);
+      } 
+      finally {
+        console.log("Calculation finished")
+      }
     });
 
     let errorBtns = Array.from(document.querySelectorAll('#error-btns > button'));
 
     // Start your code here
     // You may move this JS to another file if you wish
+
+   
+
+    errorBtns[0].addEventListener("click", e => {
+      console.log("Console Log Demo");
+    });
+
+    errorBtns[1].addEventListener("click", e => {
+      console.error("Console Error Demo");
+    });
+
+    errorBtns[2].addEventListener("click", e => {
+      console.count("Count Button: ");
+    });
+
+    errorBtns[3].addEventListener("click", e => {
+      console.warn("Console Warn Button");
+    });
+
+    errorBtns[4].addEventListener("click", e => {
+      console.assert(1 + 1 == 3, "The number does not equal 3");
+    });
+
+    errorBtns[5].addEventListener("click", e => {
+      console.clear();
+    });
+
+    errorBtns[6].addEventListener("click", e => {
+      console.dir(errorBtns[6]);
+    });
+
+    errorBtns[7].addEventListener("click", e => {
+      console.dirxml(errorBtns[7]);
+    });
+
+    errorBtns[8].addEventListener("click", e => {
+      console.group();
+    });
+
+    errorBtns[9].addEventListener("click", e => {
+      console.groupEnd();
+    });
+
+    errorBtns[10].addEventListener("click", e => {
+      console.table(["apples", "oranges", "bananas"]);
+    });
+
+    errorBtns[11].addEventListener("click", e => {
+      let timer = console.time("Timer Button");
+    });
+
+    errorBtns[12].addEventListener("click", e => {
+      console.timeEnd("Timer Button");
+    });
+
+    errorBtns[13].addEventListener("click", e => {
+      function deep() {
+        function deeper() {
+          function deepest() {
+            console.trace();
+          }
+          deepest();
+        }
+        deeper();
+      };
+      deep();
+    });
+
+    errorBtns[14].addEventListener("click", e => {
+      boom();
+    });
+
+    window.addEventListener("error", e => {
+      console.log("Sadly an error happened my friend");
+    });
   </script>
 </body>
 
